Fixed analytics column spacing issue

--- a/style.css
+++ b/style.css
@@ -2290,8 +2290,13 @@ ul.analytics {
 	list-style: none;
 	margin: 50px 0 0;
 	padding: 0;
-	float: left;
 	width: 350px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+ul.other-analytics {
+  margin-left: 16px !important;
 }
 
 ul.analytics-wide {
